<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Group_Chat_Activity">
    <RelativeLayout
        android:id="@+id/top_layer_id"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:background="@drawable/top_background_vector">

        <ImageButton
            android:id="@+id/profile_id"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@drawable/profile"
            android:contentDescription="@string/profile_picture">

        </ImageButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/video_cal_id"
            android:layout_toEndOf="@+id/profile_id"
            android:text="@string/networking_lab_group"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"></TextView>

        <ImageButton
            android:id="@+id/video_cal_id"
            android:layout_width="35dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/audio_call_id"
            android:background="@drawable/video_call_vector"
            android:contentDescription="@string/app_name"
            tools:ignore="TouchTargetSizeCheck">

        </ImageButton>

        <ImageButton
            android:id="@+id/audio_call_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/audio_call_vector"
            android:contentDescription="@string/audio_call"
            tools:ignore="TouchTargetSizeCheck">

        </ImageButton>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layer_id"
        android:layout_below="@+id/top_layer_id"
        android:contentDescription="@string/chat_box"
        tools:ignore="UselessLeaf">
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_layer_id"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background_vector">

        <ImageButton
            android:id="@+id/attach_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/attach"
            android:contentDescription="@string/attached"
            tools:ignore="TouchTargetSizeCheck">

        </ImageButton>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_message"
            android:layout_toEndOf="@id/attach_id"
            android:layout_toStartOf="@+id/sent_id"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:layout_centerVertical="true"
            android:padding="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/sent_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/send"
            android:contentDescription="@string/message_send"
            tools:ignore="TouchTargetSizeCheck">

        </ImageButton>

    </RelativeLayout>
</RelativeLayout>
