<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_In_Activity">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_background_vector">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout"
        android:background="@color/white"
        android:layout_above="@+id/bottom_layout">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="100dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/text_header"
        android:id="@+id/ip_input_id"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:suffixTextColor="@color/white"
        android:layout_width="match_parent"
        android:hint="@string/enter_ip_address"
        android:layout_height="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ipeditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/port_input_id"
            android:layout_below="@+id/ip_input_id"
            android:layout_margin="30dp"
            android:contentDescription="@string/todo"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:suffixTextColor="@color/white"
            android:layout_width="match_parent"
            android:hint="@string/enter_port_number"
            android:layout_height="60dp"
            tools:ignore="ContentDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/porteditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/signin_id"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/port_input_id"
            android:contentDescription="@string/todo"
            android:src="@drawable/singin"></ImageView>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_background_vector"
        android:layout_alignParentBottom="true"></RelativeLayout>
</RelativeLayout>